tests/negative/runtime/replace_empty_old/input.ci
void main() {
    print(replace("abc", "", "x") + "\n");
}
